# celery-course

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
.env/: .env.db-sample  .env.dev-sample
config/: celery.py  settings.py  urls.py
polls/: forms.py  tasks.py  urls.py  views.py
polls/templates/: form.html
scripts/: flower_entrypoint.sh  web_entrypoint.sh
utils/management/: __init__.py
utils/management/commands/: wait_for_db.py
